--- a/style.css
+++ b/style.css
@@ -63,7 +63,8 @@ h4 {
 
 header {
   border-radius: 0 0 0 75px;
-  position: relative;
+  position: absolute;
+  width: 100%;
   z-index: 20;
 }
 header nav {
@@ -90,8 +91,10 @@ header nav .left-nav ul .main-nav-heading .arrow-image-dark {
   display: none;
 }
 header nav .left-nav ul .main-nav-heading a {
+  font-family: "Ubuntu";
+  font-weight: 700;
   color: white;
-  padding-bottom: 20px;
+  padding-bottom: 25px;
   opacity: 0.75;
 }
 header nav .left-nav ul .main-nav-heading .dropdown-menu {
@@ -107,6 +110,7 @@ header nav .left-nav ul .main-nav-heading .dropdown-menu {
 header nav .left-nav ul .main-nav-heading .dropdown-menu a {
   color: #2D2E40;
   font-size: 15px;
+  font-weight: 400;
   line-height: 33px;
   font-family: "Ubuntu", "Overpass";
 }
@@ -140,8 +144,6 @@ header nav .hamburger-icon {
 }
 
 #hero {
-  position: fixed;
-  top: 0;
   width: 100%;
   background: url(assets/bg-pattern-intro.svg), linear-gradient(90deg, rgb(255, 143, 112) 10%, rgb(255, 61, 84) 58%);
   height: 600px;
@@ -185,4 +187,52 @@ header nav .hamburger-icon {
   background-color: #fff;
   color: #FF7B86;
   opacity: 1;
+}
+
+#slot-1 {
+  margin-top: 71px;
+}
+#slot-1 .content {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: 0.5fr 1fr;
+  position: relative;
+  -moz-column-gap: 165px;
+       column-gap: 165px;
+}
+#slot-1 .content h2 {
+  color: #1F3E5A;
+  text-align: center;
+  grid-row: 1/2;
+  grid-column: 1/3;
+  margin: 79px 0 0;
+}
+#slot-1 .content .copy {
+  max-width: 540px;
+  text-align: left;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  margin: 0 auto;
+}
+#slot-1 .content .copy section {
+  margin-bottom: 64px;
+}
+#slot-1 .content .copy section h3 {
+  color: #1F3E5A;
+  margin: 0 0 16px;
+}
+#slot-1 .content .copy section p {
+  color: #4C5862;
+  line-height: 28px;
+  letter-spacing: 0.5px;
+  text-align: left;
+  margin: 0;
+}
+#slot-1 .content picture {
+  grid-row: 1/3;
+  grid-column: 2/3;
+  max-width: 880px;
+  max-height: 882px;
+  position: absolute;
+  right: -240px;
 }/*# sourceMappingURL=style.css.map */
