--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap");
 
+@mixin breakpoint($device) {
+  @if $device ==desktop {
+    @media screen and (min-width: 1024px) {
+      @content
+    }
+  }
+
+  @else if $device ==tablet {
+    @media screen and (min-width: 415px) and (max-width: 1023px) {
+      @content
+    }
+  }
+
+  @else if $device ==mobile {
+    @media screen and (max-width: 414px) {
+      @content
+    }
+  }
+}
+
+$header-font-color: #1F3E5A;
+$copy-color: #4C5862;
+
+
+
 :root {
   font-family: "Overpass", "Ubuntu";
   margin-left: auto;
@@ -39,6 +64,17 @@ h4 {
   line-height: 30.64px;
 }
 
+// section {
+//   text-align: center;
+
+//   .content {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     gap: 125px;
+//   }
+// }
+
 .button {
   font-size: 16px;
   font-weight: 700;
@@ -65,7 +101,8 @@ h4 {
 
 header {
   border-radius: 0 0 0 75px;
-  position: relative;
+  position: absolute;
+  width: 100%;
   z-index: 20;
 
   nav {
@@ -96,8 +133,10 @@ header {
           }
 
           a {
+            font-family: "Ubuntu";
+            font-weight: 700;
             color: white;
-            padding-bottom: 20px;
+            padding-bottom: 25px;
             opacity: 0.75;
           }
 
@@ -114,6 +153,7 @@ header {
             a {
               color: #2D2E40;
               font-size: 15px;
+              font-weight: 400;
               line-height: 33px;
               font-family: "Ubuntu", "Overpass";
             }
@@ -165,8 +205,8 @@ header {
 }
 
 #hero {
-  position: fixed;
-  top: 0;
+  // position: fixed;
+  // top: 0;
   width: 100%;
   background: url(assets/bg-pattern-intro.svg),
     linear-gradient(90deg, rgba(255, 143, 112, 1) 10%, rgba(255, 61, 84, 1) 58%);
@@ -218,8 +258,62 @@ header {
           opacity: 1;
         }
       }
-
-
     }
   }
+}
+
+#slot-1 {
+  margin-top: 71px;
+
+  .content {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: 0.5fr 1fr;
+    position: relative;
+    column-gap: 165px;
+
+    h2 {
+      color: $header-font-color;
+      text-align: center;
+      grid-row: 1 / 2;
+      grid-column: 1 / 3;
+      margin: 79px 0 0;
+    }
+
+    .copy {
+      max-width: 540px;
+      text-align: left;
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      margin: 0 auto;
+
+      section {
+        margin-bottom: 64px;
+
+        h3 {
+          color: $header-font-color;
+          margin: 0 0 16px;
+        }
+
+        p {
+          color: $copy-color;
+          line-height: 28px;
+          letter-spacing: 0.5px;
+          text-align: left;
+          margin: 0;
+        }
+      }
+
+    }
+
+    picture {
+      grid-row: 1 / 3;
+      grid-column: 2 / 3;
+      max-width: 880px;
+      max-height: 882px;
+      position: absolute;
+      right: -240px;
+    }
+  }
+
 }
