--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,7 @@ $copy-color: #4C5862;
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 li {
@@ -52,6 +53,7 @@ h1 {
 
 h2 {
   font-size: 40px;
+  letter-spacing: -1.2px;
 }
 
 h3 {
@@ -62,6 +64,12 @@ h4 {
   font-size: 20px;
   font-weight: 400;
   line-height: 30.64px;
+}
+
+p {
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  line-height: 28px;
 }
 
 // section {
@@ -100,7 +108,7 @@ h4 {
 
 
 header {
-  border-radius: 0 0 0 75px;
+  border-radius: 0 0 0 100px;
   position: absolute;
   width: 100%;
   z-index: 20;
@@ -263,7 +271,7 @@ header {
 }
 
 #slot-1 {
-  margin-top: 71px;
+  margin: 71px 0 213px;
 
   .content {
     display: grid;
@@ -315,5 +323,41 @@ header {
       right: -240px;
     }
   }
+}
 
+#slot-2 {
+  background: linear-gradient(90deg,
+      rgba(44, 45, 63, 1),
+      rgba(63, 65, 96, 1));
+  border-radius: 0 100px;
+  // margin: 51px 0 100px;
+  height: 400px;
+
+  .infrastructure {
+    display: grid;
+    grid-template-columns: auto auto;
+    background: url(assets/bg-pattern-circles.svg);
+    height: 100%;
+    background-position: -225px -500px;
+    background-repeat: repeat-y;
+    color: white;
+    position: relative;
+    z-index: 1;
+    justify-content: center;
+    column-gap: 98px;
+
+    img {
+      transform: translateY(-49px);
+    }
+
+    article {
+      max-width: 540px;
+      height: fit-content;
+      transform: translateY(50%);
+
+      h2 {
+        margin: 0;
+      }
+    }
+  }
 }
