--- a/style.css
+++ b/style.css
@@ -275,4 +275,23 @@ header nav .hamburger-icon {
 }
 #slot-2 .infrastructure article h2 {
   margin: 0;
+}
+
+#slot-3 {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  align-items: center;
+  height: 786px;
+  margin-top: 116px;
+}
+#slot-3 picture {
+  position: relative;
+  max-width: 699px;
+  left: -275px;
+  grid-row: 1/3;
+}
+#slot-3 article {
+  grid-row: 1/3;
+  max-width: 540px;
 }/*# sourceMappingURL=style.css.map */
