--- a/style.scss
+++ b/style.scss
@@ -361,3 +361,24 @@ header {
     }
   }
 }
+
+#slot-3 {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  align-items: center;
+  height: 786px;
+  margin-top: 116px;
+
+  picture {
+    position: relative;
+    max-width: 699px;
+    left: -275px;
+    grid-row: 1 / 3;
+  }
+
+  article {
+    grid-row: 1 / 3;
+    max-width: 540px;
+  }
+}
