--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap");
 :root {
   font-family: "Overpass", "Ubuntu";
-  margin-left: auto;
-  margin-right: auto;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   overflow-x: hidden;
 }
 
@@ -274,7 +276,7 @@ header nav .hamburger-icon {
   transform: translateY(50%);
 }
 #slot-2 .infrastructure article h2 {
-  margin: 0;
+  margin-bottom: 5px;
 }
 
 #slot-3 {
@@ -283,7 +285,7 @@ header nav .hamburger-icon {
   grid-template-rows: auto auto;
   align-items: center;
   height: 786px;
-  margin-top: 116px;
+  margin: 116px 0 123px;
 }
 #slot-3 picture {
   position: relative;
@@ -294,4 +296,32 @@ header nav .hamburger-icon {
 #slot-3 article {
   grid-row: 1/3;
   max-width: 540px;
+}
+
+footer {
+  background-color: hsl(240, 10%, 16%);
+  border-radius: 0 75px 0 0;
+  padding: 70px 0;
+  display: flex;
+  align-items: flex-start;
+  gap: 184px;
+  justify-content: center;
+}
+footer nav {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
+  width: 825px;
+}
+footer nav h4 {
+  margin-bottom: 21px;
+  color: #fff;
+}
+footer nav a {
+  color: #fff;
+  opacity: 0.75;
+  line-height: 33px;
+  font-size: 15px;
+  font-family: "Ubuntu";
+  font-weight: 400;
 }/*# sourceMappingURL=style.css.map */
