--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ header nav .right-nav ul #login:hover {
   gap: 32px;
 }
 
+.hamburger-icon,
 .mobile-nav {
   display: none;
 }
@@ -349,10 +350,56 @@ footer nav a:hover {
   header nav {
     justify-content: space-between;
   }
+  header .mobile-nav {
+    margin-top: 37px;
+  }
+  header .mobile-nav .mobile-dropdown {
+    background-color: #fff;
+    padding: 24px;
+    min-width: 324px;
+    margin: 0 75px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+  header .mobile-nav .mobile-dropdown .dropdown-menu {
+    display: none;
+  }
+  header .mobile-nav .mobile-dropdown .mobile-account-section {
+    padding-top: 24px;
+    border-top: 1px solid #E8E4E4;
+    width: 100%;
+  }
+  header .mobile-nav .mobile-dropdown .mobile-account-section a {
+    text-align: center;
+  }
+  header .mobile-nav .mobile-dropdown .mobile-account-section #mobile-login {
+    color: #1F3E5A;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0px;
+    background-color: transparent;
+    border: none;
+    margin-bottom: 24px;
+  }
+  header .mobile-nav .mobile-dropdown .mobile-account-section #mobile-sign-up {
+    padding: 15px 40px;
+    background: linear-gradient(90deg, #FF8F71 10%, #FF3E55 58%);
+    color: #fff;
+    border-radius: 28px;
+    border: none;
+    font-family: Ubuntu;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18px;
+    letter-spacing: 0px;
+  }
   .desktop-nav {
     display: none;
   }
-  .mobile-nav {
+  .hamburger-icon {
     display: block;
   }
   #hero .hero-content .headings {
@@ -432,6 +479,12 @@ footer nav a:hover {
   #hero {
     background-size: 150%;
     background-position: 0% -150%;
+  }
+  #slot-3 {
+    gap: 80px;
+  }
+  #slot-3 picture {
+    transform: scale(1.5);
   }
   footer {
     padding: 70px 75px;
