--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-body {
+main {
   overflow-x: hidden;
 }
 
@@ -31,6 +32,7 @@ h1 {
 h2 {
   font-size: 40px;
   letter-spacing: -1.2px;
+  line-height: 61.28px;
 }
 
 h3 {
@@ -78,11 +80,23 @@ header {
   width: 100%;
   z-index: 20;
 }
+header .skip-to-content-link {
+  background: #fff;
+  height: 30px;
+  left: 0;
+  padding: 8px;
+  position: absolute;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+}
+header .skip-to-content-link:focus {
+  transform: translateY(0%);
+}
 header nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 59px 175px 0;
+  padding: 59px 165px 0;
 }
 header nav .left-nav {
   display: flex;
@@ -161,17 +175,16 @@ header nav .right-nav ul #login:hover {
   background: url(assets/bg-pattern-intro.svg), linear-gradient(90deg, rgb(255, 143, 112) 10%, rgb(255, 61, 84) 58%);
   height: 600px;
   background-size: 3100px;
-  background-position: -351px -1346px;
+  background-position: 25% -1346px;
   border-bottom-left-radius: 100px;
   color: white;
 }
 #hero .hero-content {
-  width: -moz-fit-content;
-  width: fit-content;
-  transform: translate(-50%, -50%);
-  position: relative;
-  top: 50%;
-  left: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 #hero .hero-content .headings {
   margin-bottom: 43px;
@@ -204,16 +217,20 @@ header nav .right-nav ul #login:hover {
 
 #slot-1 {
   margin: 71px 0 213px;
+  padding-top: 71px;
 }
 #slot-1 h2 {
   color: #1F3E5A;
   text-align: center;
   grid-row: 1/2;
   grid-column: 1/3;
+  margin-bottom: 50px;
 }
 #slot-1 .content {
+  -moz-column-gap: 125px;
+       column-gap: 125px;
   display: grid;
-  grid-template-columns: 1fr 0.5fr;
+  grid-template-columns: auto auto;
   position: relative;
   align-items: center;
 }
@@ -221,8 +238,8 @@ header nav .right-nav ul #login:hover {
   max-width: 540px;
   text-align: left;
   grid-column: 1/2;
-  grid-row: 2/3;
-  margin: 93px 0 0 175px;
+  margin-left: 165px;
+  padding-top: 70px;
 }
 #slot-1 .content .copy section {
   margin-bottom: 64px;
@@ -239,43 +256,42 @@ header nav .right-nav ul #login:hover {
   margin: 0;
 }
 #slot-1 .content picture {
-  grid-row: 1/3;
   grid-column: 2/3;
   transform: scale(1.5) translateX(10%);
-  padding-top: 71px;
 }
 #slot-1 .content picture img {
   max-width: 100%;
   height: auto;
+  min-width: 300px;
 }
 
 #slot-2 {
   background: linear-gradient(90deg, rgb(44, 45, 63), rgb(63, 65, 96));
+  background-repeat: no-repeat;
   border-radius: 0 100px;
   height: 400px;
+  position: relative;
 }
 #slot-2 .infrastructure {
-  display: grid;
-  grid-template-columns: auto auto;
   background: url(assets/bg-pattern-circles.svg);
+  background-position: 50% -500px;
+  background-repeat: no-repeat;
+  border-radius: 0 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  -moz-column-gap: 115px;
+       column-gap: 115px;
   height: 100%;
-  background-position: -225px -500px;
-  background-repeat: repeat-y;
   color: white;
-  position: relative;
-  z-index: 1;
-  justify-content: center;
-  -moz-column-gap: 98px;
-       column-gap: 98px;
 }
 #slot-2 .infrastructure img {
-  transform: translateY(-49px);
+  transform: translateY(40px);
+  margin-left: 125px;
 }
 #slot-2 .infrastructure article {
   max-width: 540px;
-  height: -moz-fit-content;
-  height: fit-content;
-  transform: translateY(50%);
+  margin-right: 100px;
 }
 #slot-2 .infrastructure article h2 {
   margin-bottom: 5px;
@@ -288,6 +304,9 @@ header nav .right-nav ul #login:hover {
   align-items: center;
   height: 786px;
   margin: 116px 0 123px;
+  justify-content: space-between;
+  -moz-column-gap: 98px;
+       column-gap: 98px;
 }
 #slot-3 picture {
   position: relative;
@@ -298,6 +317,10 @@ header nav .right-nav ul #login:hover {
 #slot-3 article {
   grid-row: 1/3;
   max-width: 540px;
+  margin-right: 80px;
+}
+#slot-3 article h3 {
+  color: #1F3E5A;
 }
 #slot-3 article section:nth-child(1) {
   margin-bottom: 64px;
@@ -316,10 +339,12 @@ footer nav {
   grid-template-columns: repeat(3, 1fr);
   justify-content: space-between;
   width: 825px;
+  font-family: "Ubuntu", "Overpass";
 }
 footer nav h4 {
   margin-bottom: 21px;
   color: #fff;
+  line-height: 33px;
 }
 footer nav a {
   color: #fff;
@@ -332,17 +357,29 @@ footer nav a:hover {
   text-decoration: underline;
 }
 
-@media screen and (min-width: 1500px) {
+@media screen and (max-width: 1225px) and (min-width: 1024px) {
+  header nav {
+    padding: 59px 100px 0;
+  }
+  #slot-1 .content .copy {
+    margin-left: 100px;
+  }
   #slot-2 .infrastructure {
-    justify-content: unset;
+    -moz-column-gap: 50px;
+         column-gap: 50px;
+  }
+  #slot-2 .infrastructure img {
+    margin-left: 65px;
+  }
+  #slot-2 .infrastructure article {
+    margin-right: 50px;
+  }
+  #slot-3 {
+    -moz-column-gap: unset;
+         column-gap: unset;
   }
 }
 @media screen and (max-width: 1023px) {
-  h1 {
-    font-size: 36px;
-    line-height: 55px;
-    letter-spacing: -1.08px;
-  }
   h4 {
     font-size: 18px;
     line-height: 28px;
@@ -352,6 +389,14 @@ footer nav a:hover {
   }
   header .mobile-nav {
     margin-top: 37px;
+  }
+  header .mobile-nav .mobile-dropdown-background {
+    top: 0;
+    position: absolute;
+    left: 0;
+    height: 100dvh;
+    width: 100dvw;
+    z-index: 0;
   }
   header .mobile-nav .mobile-dropdown {
     background-color: #fff;
@@ -363,6 +408,8 @@ footer nav a:hover {
     align-items: center;
     gap: 24px;
     box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.243444);
+    position: relative;
+    z-index: 1;
   }
   header .mobile-nav .mobile-dropdown .nav-option {
     display: flex;
@@ -458,12 +505,6 @@ footer nav a:hover {
   #slot-1 {
     margin-bottom: 273px;
   }
-  #slot-1 h2 {
-    font-size: 28px;
-    line-height: 43px;
-    letter-spacing: -0.84px;
-    margin-bottom: 38px;
-  }
   #slot-1 .content {
     display: flex;
     flex-direction: column-reverse;
@@ -473,6 +514,7 @@ footer nav a:hover {
     text-align: center;
     margin: 0 75px;
     max-width: unset;
+    padding-top: unset;
   }
   #slot-1 .content .copy section p {
     text-align: inherit;
@@ -484,9 +526,10 @@ footer nav a:hover {
   #slot-2 {
     height: unset;
   }
+  #slot-2::before {
+    background-position-x: 50%;
+  }
   #slot-2 .infrastructure {
-    background-repeat: no-repeat;
-    background-position: 50% -500px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -494,6 +537,7 @@ footer nav a:hover {
   #slot-2 .infrastructure img {
     max-height: 347px;
     transform: scale(1.5) translateY(-100px);
+    margin-left: unset;
   }
   #slot-2 .infrastructure article {
     min-height: 327px;
@@ -504,6 +548,7 @@ footer nav a:hover {
     flex-direction: column;
     padding: 0 75px;
     text-align: center;
+    margin-right: unset;
   }
   #slot-2 .infrastructure article h2 {
     margin-bottom: 10px;
@@ -520,15 +565,30 @@ footer nav a:hover {
   }
   #slot-3 article {
     text-align: center;
+    margin-right: unset;
   }
 }
-@media screen and (max-width: 1023px) and (min-width: 769px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  h1 {
+    font-size: 48px;
+    line-height: 55px;
+    letter-spacing: -1.08px;
+  }
   header nav {
     padding: 56px 75px 0;
   }
   #hero {
-    background-size: 150%;
-    background-position: 0% -150%;
+    background-size: 200%;
+    background-position: -175px 50%;
+  }
+  #slot-1 h2 {
+    margin-bottom: 92px;
+  }
+  #slot-1 .content picture {
+    margin-top: 38px;
+  }
+  #slot-1 .content .copy {
+    padding-top: unset;
   }
   #slot-3 {
     gap: 80px;
@@ -543,5 +603,89 @@ footer nav a:hover {
   }
   footer nav {
     width: 500px;
+  }
+}
+@media screen and (max-width: 767px) {
+  h1 {
+    font-size: 36px;
+    line-height: 55px;
+    letter-spacing: -1.08px;
+  }
+  header nav {
+    padding: 56px 24px 0;
+  }
+  #hero {
+    background-size: 200%;
+    background-position: -100px;
+  }
+  #hero .hero-content .headings {
+    text-align: center;
+    max-width: calc(100% - 48px);
+    margin: 0 auto 38px;
+  }
+  #slot-1 h2 {
+    font-size: 28px;
+    line-height: 43px;
+    letter-spacing: -0.84px;
+    margin-bottom: 38px;
+  }
+  #slot-1 .content picture {
+    transform: unset;
+    margin: 0;
+    padding: 0;
+  }
+  #slot-1 .content .copy {
+    margin: 0 24px;
+  }
+  #slot-2 {
+    height: 625px;
+  }
+  #slot-2 .infrastructure img {
+    max-height: 498px;
+    transform: translateY(-225px);
+  }
+  #slot-2 .infrastructure article {
+    transform: translateY(-250px);
+    padding: 0 24px;
+  }
+  #slot-3 {
+    height: unset;
+    margin: 79px 24px 0px;
+  }
+  footer {
+    margin-top: 100px;
+    padding: 75px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;
+  }
+  footer nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    gap: 40px;
+  }
+  footer nav a {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 414px) {
+  #hero {
+    background-size: 1450px;
+    background-position: -400px 35%;
+  }
+  #slot-2 .infrastructure img {
+    max-height: 410px;
+  }
+}
+@media screen and (max-width: 374px) {
+  #slot-2 .infrastructure img {
+    max-height: 300px;
+    transform: translateY(-145px);
+  }
+  #slot-2 .infrastructure article {
+    transform: translateY(-145px);
   }
 }/*# sourceMappingURL=style.css.map */
