--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ header nav .right-nav ul #login:hover {
 }
 #slot-2 .infrastructure {
   background: url(assets/bg-pattern-circles.svg);
-  background-position: 50% -500px;
+  background-position: -215px -500px;
   background-repeat: no-repeat;
   border-radius: 0 100px;
   display: flex;
@@ -530,6 +530,7 @@ footer nav a:hover {
     background-position-x: 50%;
   }
   #slot-2 .infrastructure {
+    background-position: 50% -500px;
     display: flex;
     flex-direction: column;
     align-items: center;
