--- a/style.scss
+++ b/style.scss
@@ -397,6 +397,10 @@ footer {
     width: 825px;
     font-family: "Ubuntu", "Overpass";
 
+    .footer-nav {
+      grid-row: 2 / 3;
+    }
+
     h4 {
       margin-bottom: 21px;
       color: #fff;
